--- a/resources/mainUI.fxml
+++ b/resources/mainUI.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="application.controller.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.Controller">
+   <Button fx:id="pair_button" layoutX="467.0" layoutY="91.0" prefHeight="56.0" prefWidth="55.0" text="pair" />
    <Pane id="base" fx:id="base_square" layoutX="150.0" layoutY="50.0" prefHeight="300.0" prefWidth="300.0">
-      <Rectangle fx:id="game_panel" arcHeight="5.0" arcWidth="5.0" fill="#f2f2f2" height="270.0" layoutX="15.0"
-                 layoutY="15.0" stroke="BLACK" strokeType="INSIDE" width="270.0"/>
-      <Line endX="170.0" layoutX="115.0" layoutY="105.0" startX="-100.0"/>
-      <Line endX="170.0" layoutX="115.0" layoutY="195.0" startX="-100.0"/>
-      <Line endX="170.0" layoutX="70.0" layoutY="150.0" rotate="270.0" startX="-100.0"/>
-      <Line endX="170.0" layoutX="160.0" layoutY="151.0" rotate="90.0" startX="-100.0"/>
+
+      <Rectangle fx:id="game_panel" arcHeight="5.0" arcWidth="5.0" fill="#f2f2f2" height="270.0" layoutX="15.0" layoutY="15.0" stroke="BLACK" strokeType="INSIDE" width="270.0" />
+      <Line endX="170.0" layoutX="115.0" layoutY="105.0" startX="-100.0" />
+      <Line endX="170.0" layoutX="115.0" layoutY="195.0" startX="-100.0" />
+      <Line endX="170.0" layoutX="70.0" layoutY="150.0" rotate="270.0" startX="-100.0" />
+      <Line endX="170.0" layoutX="160.0" layoutY="151.0" rotate="90.0" startX="-100.0" />
    </Pane>
 </AnchorPane>
